# fluffy-octo-spork

./: .env.example  .gitignore  CLAUDE.md  DEV_WORKFLOW.md  IMPROVEMENTS.md  PLANNING.md  PROJECT_STRUCTURE.md  README.md  TASK.md  analyze_api_findings.py  analyze_multi_outcome.py  check_api.py  check_available_markets.py  check_clob_api.py  check_response.py  debug_analysis.py  debug_fuzzy_match.py  debug_market_fetch.py  deep_market_search.py  demo_market_research.py  direct_opportunity_finder.py  enhanced_market_researcher.py  find_budget_market.py  find_current_markets.py  find_more_opportunities.py  find_multi_outcome.py  gamma_response.json  main.py  manual_backtest.py  pyproject.toml  quick_check.py  response.html  run_analysis.py  run_analyzer.py  run_historical_backtest.py  save_actual_response.py  search_current_elections.py  test_analyzer.py  test_analyzer_direct.py  test_api_direct.py  (+19 more)
.claude/: settings.local.json
data/: api_response.json  decoded_response.html  market_patterns.json  predictions.jsonl  unknown_markets.json
docs/: opportunities_summary.md
examples/: improved_output_example.md  sanity_check_integration.py
scripts/: debug_analyzer.py  demo_simple_analyzer.py  find_opportunities_guide.py  investigate_market_api.py  manual_test_async_analyzer.py  market_check.py  market_researcher.py  show_opportunities.py  simple_debug.py  simple_test.py  test_analyzer_directly.py
tests/: test_backtesting.py  test_bayesian_updater.py  test_crypto_model.py  test_fair_value_engine.py  test_integration.py  test_integration_proper.py  test_kelly_criterion.py  (+11 more)
(+70 files in other folders)
